--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="carousel-item active">
               <div class="row">
                 <div class="col-md-6">
-                  <h1 class="banner_taital">Email mark provides <br> you a wonderful viewing experience </h1>
+                  <h1 class="banner_taital">让我们看你的餐盘 <br> 上传照片，我们告诉你文献上怎么说的？ </h1>
                   <div class="contact_bt"><a href="contact.html">Contact Us</a></div>
                 </div>
                 <div class="col-md-6">
@@ -84,7 +84,7 @@
             <div class="carousel-item">
               <div class="row">
                 <div class="col-md-6">
-                  <h1 class="banner_taital">Email mark provides <br> you a wonderful viewing experience </h1>
+                  <h1 class="banner_taital">让我们看你的餐盘 <br> 上传照片，我们告诉你文献上怎么说的？ </h1>
                   <div class="contact_bt"><a href="contact.html">Contact Us</a></div>
                 </div>
                 <div class="col-md-6">
@@ -95,7 +95,7 @@
             <div class="carousel-item">
               <div class="row">
                 <div class="col-md-6">
-                  <h1 class="banner_taital">Email mark provides <br> you a wonderful viewing experience </h1>
+                  <h1 class="banner_taital">餐盘照片2 mark provides <br> 上传照片，我们告诉你文献上怎么说的？ </h1>
                   <div class="contact_bt"><a href="contact.html">Contact Us</a></div>
                 </div>
                 <div class="col-md-6">
@@ -124,8 +124,8 @@
             <div class="image_2"><img src="images/img-2.png"></div>
           </div>
           <div class="col-md-6">
-            <h1 class="mark_text">Mark email carefully for you</h1>
-            <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quisLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quisLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore </p>
+            <h1 class="mark_text">餐盘照片2 carefully for you</h1>
+            <p class="lorem_text">上传照片，我们告诉你文献上怎么说的？r sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quisLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quisLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore </p>
             <div class="contact_bt"><a href="#">Read More</a></div>
           </div>
         </div>
@@ -137,7 +137,7 @@
       <div class="container">
         <h1 class="solution_text">Mark email is an all in one solution </h1>
         <div class="image_3"><img src="images/img-3.png"></div>
-        <p class="ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quisLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quisLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore </p>
+        <p class="ipsum_text">上传照片，我们告诉你文献上怎么说的？ amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quisLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quisLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore </p>
         <div class="make_bt"><a href="#">Make Now</a></div>
       </div>
     </div>
@@ -218,7 +218,7 @@
     <!-- design section start -->
     <div class="design_section layout_padding">
       <div class="container">
-        <h1 class="solution_text">Wonderful marketing design</h1>
+        <h1 class="solution_text">文献上怎么说的？</h1>
         <div class="image_4"><img src="images/img-4.png"></div>
         <p class="ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quisLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quisLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore </p>
         <div class="make_bt"><a href="#">Make Now</a></div>
@@ -245,7 +245,7 @@
         <div class="row">
           <div class="col-lg-6 col-sm-12">
             <div class="footer_logo"><a href="index.html"><img src="images/logo.png"></a></div>
-            <h4 class="contact_text">Contact Us</h4>
+            <h4 class="contact_text">餐盘照片</h4>
             <div class="call_section">
               <div class="call_section_left">
                 <div class="map_icon"><img src="images/map-icon.png"></div>
